# agentHack-skills

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  README.md  SECURITY.md  index.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: skill_request.md
.github/workflows/: release.yml  validate-skills.yml
docs/: index.html
mappings/mitre-attack/: coverage.md
mcp-server/: pyproject.toml
mcp-server/agentlab/: __init__.py  challenge_registry.py  cli.py  flag_verifier.py  lab_manager.py  models.py  server.py
scripts/: check_safety.py  generate_index.py  validate_skills.py
skills/analyzing-cron-job-privesc-vectors/: SKILL.md
skills/analyzing-jwt-token-security/: SKILL.md
skills/analyzing-network-packet-captures/: SKILL.md
skills/analyzing-sudo-rules-for-privesc-vectors/: SKILL.md
skills/analyzing-web-application-http-headers/: SKILL.md
skills/cracking-weak-hashes-in-lab-environment/: SKILL.md
skills/detecting-insecure-deserialization-vulnerabilities/: SKILL.md
skills/detecting-lfi-path-traversal-vulnerabilities/: SKILL.md
skills/detecting-sql-injection-vulnerabilities/: SKILL.md
skills/detecting-ssrf-vulnerabilities/: SKILL.md
skills/detecting-suid-misconfigurations-for-privesc/: SKILL.md
skills/detecting-xss-vulnerabilities-in-web-apps/: SKILL.md
skills/exploiting-command-injection-vulnerabilities/: SKILL.md
skills/performing-arp-spoofing-in-lab/: SKILL.md
skills/performing-dns-zone-transfer-attacks/: LICENSE  SKILL.md
skills/performing-osint-recon-on-simulated-target/: SKILL.md
skills/performing-password-spray-in-lab/: SKILL.md
skills/performing-smb-enumeration-in-lab/: SKILL.md
(+12 files in other folders)
