[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentlab"
version = "0.1.0"
description = "AgentHack-Skills MCP server — spin up ethical hacking labs, execute commands, verify flags"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "mukul975" }]
requires-python = ">=3.10"
keywords = ["mcp", "cybersecurity", "ethical-hacking", "ctf", "education", "labs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Education",
]
dependencies = [
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4.0",
    "mypy>=1.9",
]

[project.scripts]
agentlab = "agentlab.cli:app"

[project.urls]
Homepage = "https://github.com/mukul975/agentHack-skills"
Repository = "https://github.com/mukul975/agentHack-skills"
Issues = "https://github.com/mukul975/agentHack-skills/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentlab*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
